-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.14.0
-
None
-
3
-
9223372036854775807
An assertion is triggered, and it mean the request->rq_transno is 0.
[25892.430672] LustreError: 137-5: fs0a92-OST0006_UUID: not available for connect from 172.16.0.32@o2ib (no target). If you are running an HA pair check that the target is mounted on the other server. [25892.435324] LustreError: Skipped 74 previous similar messages [27887.087931] LustreError: 27219:0:(tgt_main.c:354:tgt_cancel_slc_locks()) ASSERTION( lock->l_client_cookie != 0 ) failed: [27887.090610] LustreError: 27219:0:(tgt_main.c:354:tgt_cancel_slc_locks()) LBUG
- duplicates
-
LU-13402 sanity test_252: Invalid number of mdtlov clients returned by /usr/sbin/lr_reader
-
- Resolved
-